static/style.css
*{
    padding: 0;
    margin: 0;
    
}

ul {
    list-style-image: url('./images/check_circle.png');
    padding-left: 20px
}
li{
    margin-top: ;
}
.menu{
    display: none;
    margin: 25px;
}
a{
    text-decoration: none;
}
a:hover{
    color: #FF575E;
}
.active a{
    color: #FF575E;
}
.head{
    display: flex;
    padding: 30px 30px 30px 50px;
    box-shadow: 0px 4px 20px rgba(189, 177, 205, 0.2);
}
.haotai{
    display: flex;
    margin: 0 10px 0 0;
    width: 50%;
    align-items: center;
}
.haotai h1{
    padding: 12px;
}
.details{
    display: flex;
    width: 50%;
    margin: 25px;
    justify-content: right;
    gap: 40px;
}
.second{
    display: grid;
    margin: 50px 50px 80px 50px;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
}
.third{
    margin-bottom: 100px;
}
.third h1{
    text-align: center;
}
.paragraph{
    grid-column: span 1;
    
}
.blank{
    grid-column: span 1;
}
.blank img{
    width: 100%;
    border-radius: 20px;
}
.blocks{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-items: center;
}
.number{
    background-color: #FFE2E4;
    border-radius: 10px;
    margin-right: 20px;
    grid-column: span 1;
    border: 2px solid black;
}
.number p{
    padding: 10px;
    text-align: center;
}
.read{
    text-align: center;
    background-color: #FF575E;
    border-radius: 10px;
    max-width: fit-content;
    margin-top: 15px;
    margin-bottom: 15px;
}
.read p{
    color: white;
    padding: 5px;
    
}
.read a:hover{
    color: #FF575E;
}
.read:hover{
    background-color: black;
    border: 2px solid #FF575E;
}
h2{
    text-align: center;
}
.job{
    display: grid;
    grid-template-columns: repeat(6, 1fr);
}
.vacancy{
    grid-column: span 2;
    border: 1px solid #FFE2E4;
    text-align: center;
    margin: 30px;
    border-radius: 10px;
    column-gap: 10px;
    padding: 20px;
}
.vacancy img{
    background-color: #FFE2E4;
    border-radius: 10px;
    margin: 5px;
}
.vacancy p{
    margin: 8px;
    
}
.vacancy a{
    color: black;
}
.vacancy:hover, .vacancy a:hover{
    background-color: #FF575E;
    color: white;
}
.slots{
    background-color: #FFE2E4;
    border-radius: 10px;
    padding: 4px;
    margin: 10px auto;
    width: fit-content;
    color: #FF575E;
}
.slots a{
    color: #FF575E;
}
.more {
    align-items: center;
    display: flex;
    justify-content: center;
}
.benefits{
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    row-gap: 30px;
}
.travel{
    grid-column: span 2;
    max-width: 300px;
}
.travel h3{
    margin-bottom: 15px;
}
.travel li{
    margin-bottom: 5px;
}
.violet{
    background-color: #F6F3FC;
    padding: 40px;
    padding-left: 60px;
}
.violet h2{
    text-align: left;
    margin: 25px auto;
}
.icons{
    display: flex;
    
}
.icons a{
    margin-right: 10px;
}
.icons img{
    
    width: 100%;
    
}
.connect{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    row-gap: 20px;
}
.blue{
    background-color: #FF575E;
    color: white;
    padding: 50px;
    
}
.links a{
    color: white;
    margin-right: 20px;
}
.options{
    margin-top: 30px;
}
.blue h2{
    text-align: left;
    margin-bottom: 40px;
}
.media p{
    margin-bottom: 20px;
}
.media{
    justify-self: self-end;
    grid-column: span 1;
    display: flex;
    gap: 100px;
}
#call{
    color: white;
}
.links{
    grid-column: span 1;
}
.pdfview{
    margin-bottom: 20px;
    margin-left: -22px;
}
@media only screen and (max-width:900px){
    .paragraph{
        grid-column: span 2;
    }
    .blank{
        display: none;
    }
    .details{
        display: none;
    }
    .menu{
        display: block;
    }
    .haotai{
        width: 90%;
    }
}
@media only screen and (max-width:930px){
    .vacancy{
        grid-column: span 3;
    }
    .travel{
        grid-column: span 3;  
    }
    
}
@media only screen and (max-width:550px){
    .vacancy{
        grid-column: span 6;
        text-align: left;
    }
    .vacancy a{
        display: flex;
    }
    #more{
        padding: 5px;
    }
    .travel{
        grid-column: span 6;
        height: 200px;
    }
    .number{
        display: none;
    }
    .links{
        grid-column: span 2;
    }
    .media{
        grid-column: span 2;
    }
    .details a{
        padding: 10px;
    }
    .blue{
        display: none;
    }
    .haotai h1{
        display: none;
    }
    ul {
        list-style-image: url('./images/check_icon.png');
    }
    .more{
        background-color: #FF575E;
    }
    .more a{
        color: white;
    }
    .slots{
        margin-left: 10px;
    }
    .vacancy h3{
        padding-left: 8px;
    }
}
.menubar{
    padding: 50px;
}
.menuclick{
    display: grid;
    grid-template-rows: repeat(1, 1fr);
    text-align: center;
    gap: 30px;
    
}
.menuclick img{
    margin: auto;
}
.menuclick a{
    color: black;
}
.follow{
    text-align: center;
    padding-top: 40px;
    color: #FFAEB2;
}
.mediaicon{
    padding: 10px;
    display: flex;
}
.mediaicon a{
    margin: auto;
}
.mediaicon img{
    filter: contrast(0%);
}
#navbar{
    background-color: rgb(163, 197, 197, 0.842);
    height: 100vh;
    z-index: 1;
    width: 0%;
    overflow-x: hidden;
    position: fixed;
    transition: 0.5s;
    top: 0;
    left: 0;
}

